<resources>
    <string name="app_name">inClass2b</string>
    <string name="meters">Meters:</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="result">Result:</string>
    <string name="to_inches">To Inches</string>
    <string name="to_feet">To Feet</string>
    <string name="to_miles">To Miles</string>
    <string name="clear_all">Clear All</string>
    <string name="convert">Convert</string>
</resources>
